사용자 메시지 전송 기능 구현

--- a/src/components/Chatbot/Chatbot.css
+++ b/src/components/Chatbot/Chatbot.css
@@ -55,8 +55,8 @@
 }
 
 .response_content {
-  width: 380px;
-  height: 250px;
+  width: 400px;
+  height: auto;
   background-color: var(--light-grey-color);
   padding: 18px 20px;
   border-radius: 15px;
@@ -90,20 +90,26 @@
 }
 
 #chatbot_inputArea {
-  width: 650px;
   display: flex;
   align-items: center;
   position: absolute;
   bottom: 0;
   margin-bottom: 15px;
+  margin-left: 6px;
 }
 
 #chatbot_inputArea textarea {
-  width: 550px;
+  width: 540px;
   height: 40px;
   border: 0;
   background-color: var(--light-grey-color);
   border-radius: 40px;
+  flex: 1;
+  padding: 10px 20px;
+}
+
+#chatbot_inputArea textarea:focus {
+  outline: none;
 }
 
 #chatbot_inputArea button {
@@ -114,6 +120,10 @@
   color: white;
   border-radius: 50px;
   margin-left: 5px;
+}
+
+#chatbot_sendList {
+  list-style-type: none;
 }
 
 /* .stat_container {
