--- a/src/components/Chatbot/Chatbot.css
+++ b/src/components/Chatbot/Chatbot.css
@@ -146,6 +146,10 @@
   padding: 18px 20px;
   border-radius: 15px;
   margin-top: 5px;
+
+  list-style-type: none;
+  float: left;
+  margin: 7px 30px;
 }
 
 /* .stat_container {
