--- a/src/components/Chatbot/Chatbot.css
+++ b/src/components/Chatbot/Chatbot.css
@@ -65,7 +65,7 @@
 }
 
 #showGraph {
-  width: 380px;
+  width: 280px;
   height: 35px;
   margin-top: 7px;
 
@@ -74,6 +74,7 @@
   font-size: 14px;
   border: 0;
   border-radius: 40px;
+  margin-left: 60px;
 }
 
 #chatbot_sendmessage {
