--- a/src/pages/ChatPage.css
+++ b/src/pages/ChatPage.css
@@ -30,8 +30,14 @@
   justify-content: center;
 }
 
-.chatbot-board {
+.loading-position {
   /* text-align: center; */
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .Card {
