--- a/src/components/healthData/healthData.css
+++ b/src/components/healthData/healthData.css
@@ -24,8 +24,10 @@
 }
 
 .healthData_container {
-  width: 310px;
+  width: 340px;
   height: 310px;
+  margin-left: 20px;
+  margin-right: 20px;
 
   padding: 10px;
   border-radius: 15px;
@@ -37,7 +39,7 @@
 .healthData_title {
   margin-left: 20px;
   margin-top: 10px;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
 }
 
