--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -11,7 +11,9 @@ body {
 .cards {
   display: flex;
   justify-content: space-between;
-  margin: 10% 10%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 3%;
 }
 
 .cards .Card-layout .Card-container .title {
